--- a/paper/ApJtemplate/template.bib
+++ b/paper/ApJtemplate/template.bib
@@ -446,6 +446,19 @@
   pages={A59},
   year={2013},
   publisher={EDP Sciences}}
+  @article{Nesvadba_2006,
+   title={Extreme Gas Kinematics in thez = 2.2 Powerful Radio Galaxy MRC 1138−262: Evidence for Efficient Active Galactic Nucleus Feedback in the Early Universe?},
+   volume={650},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.1086/507266},
+   DOI={10.1086/507266},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={IOP Publishing},
+   author={Nesvadba, N. P. H. and Lehnert, M. D. and Eisenhauer, F. and Gilbert, A. and Tecza, M. and Abuter, R.},
+   year={2006},
+   month={Oct},
+   pages={693–705}}
   @article{Toba_2019,
    title={A Wide and Deep Exploration of Radio Galaxies with Subaru HSC (WERGS). II. Physical Properties Derived from the SED Fitting with Optical, Infrared, and Radio Data},
    volume={243},
